# edusynth

./: .gitignore  CLAUDE.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: benchmark.yml  ci.yml  pages.yml
.streamlit/: config.toml
docs/: aan-de-slag.md  configuratie.md  index.md  validatie.md
docs/methodologie/: index.md
scripts/: benchmark.py  benchmark_baseline.json  download_datasets.py  record-demo.py
src/ceda_synth/: __init__.py  app.py  cli.py
src/ceda_synth/core/: synthesize.py  validate.py
src/ceda_synth/ui/: config.py  datasource.py  results.py
src/edu_synth/: __init__.py  app.py  cli.py
src/edu_synth/assets/: streamlit-custom.css
src/edu_synth/core/: report_pdf.py  synthesize.py  validate.py
src/edu_synth/ui/: config.py  datasource.py  results.py  stepper.py  theme.py
src/edusynth/: __init__.py  cli.py  synthesize.py  validate.py
tests/ceda_synth/: test_app.py  test_cli.py
tests/ceda_synth/core/: test_synthesize.py  test_validate.py
tests/ceda_synth/ui/: test_results.py
tests/edu_synth/: test_benchmark.py  test_cli.py
tests/edu_synth/core/: test_report_pdf.py  test_synthesize.py  test_validate.py
tests/edu_synth/ui/: test_config.py  test_datasource.py  test_results.py  test_stepper.py
tests/edusynth/: test_cli.py  test_synthesize.py  test_validate.py
tests/fixtures/: mini_doorstroom.csv  mini_inschrijving.csv  mini_schema.yaml
