[project]
name = "ceda-synth"
version = "0.1.0"
description = "Synthetic data generation for Dutch educational datasets"
readme = "README.md"
license = { text = "EUPL-1.2" }
requires-python = "==3.12.*"
dependencies = [
    "sdv>=1.17",
    "sdmetrics>=0.14",
    "pandas>=2.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "streamlit>=1.35",
    "plotly>=5.0",
    "scipy>=1.11",
]

[project.scripts]
ceda-synth = "ceda_synth.cli:main"

[project.urls]
Homepage = "https://github.com/cedanl/ceda-synth"
Repository = "https://github.com/cedanl/ceda-synth"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ceda_synth"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
]

[tool.uv]
# In een devcontainer staan de uv-cache en de .venv vaak op verschillende
# filesystems, waardoor hardlinken faalt en uv terugvalt op een trage
# volledige kopie. Tijdens die kopie is de .venv tijdelijk incompleet
# (bv. scipy.stats ontbreekt), wat een ModuleNotFoundError geeft als je een
# commando draait voordat de sync klaar is. "copy" maakt dit gedrag expliciet
# en onderdrukt de hardlink-waarschuwing.
link-mode = "copy"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.isort]
known-first-party = ["ceda_synth"]

[tool.pytest.ini_options]
testpaths = ["tests"]
