[project]
name = "edu-synth"
version = "0.1.0"
description = "Synthetic data generation for Dutch educational datasets"
readme = "README.md"
license = { text = "EUPL-1.2" }
requires-python = "==3.12.*"
dependencies = [
    "sdv>=1.17",
    "sdmetrics>=0.14",
    "pandas>=2.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "streamlit>=1.35",
    "plotly>=5.0",
    "scipy>=1.11",
]

[project.scripts]
edu-synth = "edu_synth.cli:main"

[project.urls]
Homepage = "https://github.com/cedanl/edusynth"
Repository = "https://github.com/cedanl/edusynth"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/edu_synth"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.isort]
known-first-party = ["edu_synth"]

[tool.pytest.ini_options]
testpaths = ["tests"]
