[project]
name = "edu-synth"
version = "0.1.0"
description = "Synthetic data generation for Dutch educational datasets"
readme = "README.md"
license = { text = "EUPL-1.2" }
requires-python = "==3.12.*"
dependencies = [
    "sdv>=1.17",
    "sdmetrics>=0.14",
    "pandas>=2.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "streamlit>=1.35",
    "plotly>=5.0",
    "scipy>=1.11",
    "reportlab>=4.0",
]

[project.scripts]
edu-synth = "edu_synth.cli:main"

[project.urls]
Homepage = "https://github.com/cedanl/edusynth"
Repository = "https://github.com/cedanl/edusynth"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/edu_synth"]

# uv sync installeert standaard geen groepen: een tester/instelling krijgt alleen de
# app-runtime. Tooling zit per doel achter een expliciete groep — draai bv.
# `uv sync --group dev` (test/lint), `--group docs` of `--group demo` naar behoefte,
# of `uv sync --all-groups` voor de volledige dev-omgeving.
[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]
docs = [
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
]
# Alleen voor scripts/record-demo.py (app-demo-opname). Bevat een zware ffmpeg-binary
# + headless Chromium — bewust buiten het standaard installatiepad.
demo = [
    "playwright>=1.40",
    "imageio-ffmpeg>=0.4",
]

[tool.uv]
default-groups = []

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.isort]
known-first-party = ["edu_synth"]

[tool.pytest.ini_options]
testpaths = ["tests"]
